<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_now_playing"
            android:icon="@drawable/ic_menu_now_playing"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_menu_upcoming"
            android:title="@string/upcoming" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_movie_search"
            android:title="@string/search_movies" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_menu_favourite"
            android:title="@string/favourite"
            />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/change_language_settings" />
        </menu>
    </item>

</menu>
